# aoc

./: .gitignore  README.md
Python/aoc2021/: README.md
Rust/aoc2021/: README.md
Rust/aoc2021/src/: day1.rs  day2.rs  day3.rs  dayX.rs
Rust/aoc2022/: Cargo.toml  README.md
Rust/aoc2022/bench-times/: day1.txt  day10.txt  day2.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
Rust/aoc2022/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day7_plan_b.rs  day8.rs  day9.rs  lib.rs
Rust/aoc2023/: Cargo.toml  README.md
Rust/aoc2023/bench-times/: day1.txt  day2.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt
Rust/aoc2023/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs
Rust/aoc2024/: Cargo.toml  README.md
Rust/aoc2024/src/: day1.rs  day2.rs  day3.rs  day4.rs
Rust/utils/: Cargo.toml
Rust/utils/src/: counting_set.rs  grid.rs  iter.rs  lib.rs  parse.rs
Rust/utils/src/grid/: grid.rs  impl_to_grid.rs  mod.rs
Rust/utils/src/iter/: chunk.rs
