[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
strip = true

[dependencies]
utils = { path = "../utils" }
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
rayon = "1.8"
smallvec = "1.11"
